--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0;
 }
+
 
 .logo {
   height: 6em;
@@ -39,4 +37,27 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.hideMenuNav {
+  display: none;
+}
+.showMenuNav {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: white;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+body {
+  width: 100vw;
+  overflow-x: hidden;
 }
